<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>keymint_cli</name>
  <version>0.0.1</version>
  <description>
    Framework for keymint command line tools.
  </description>
  <maintainer email="ruffin@osrfoundation.org">Ruffin White</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>python3-setuptools</build_depend>

  <exec_depend>python3-comarmors</exec_depend>
  <!-- <exec_depend>python3-argcomplete</exec_depend> -->
  <exec_depend>python3-pkg-resources</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
